# sddm2rpm

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
src/: archive.rs  main.rs  rpm_build.rs  spec_builder.rs
templates/: spec.hbs
