[package]
name = "sddm2rpm"
version = "0.1.0"
edition = "2018"
description = "a simple cli tool to genrate rpms from plasma sddm tar.gz"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.3"
clap = "3.1.18"
flate2 = "1.0.20"
handlebars = "4.3.6"
rpm-rs = "0.8.1"
serde = { version = "1.0.152", features = ["serde_derive"] }
sys-info = "0.9.1"
tar = "0.4.38"
walkdir = "2.3.2"
xz2 = "0.1.6"
zstd = { version = "0.9.0", default-features = false }

[package.metadata.rpm]
package = "sddm2rpm"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
sddm2rpm = { path = "/usr/bin/sddm2rpm" }
