[package]
name = "sddm2rpm"
version = "1.1.0"
edition = "2018"
description = "a simple cli tool to genrate rpms for sddm form tar.gz"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Lunarequest/sddm2rpm/blob/mistress/README.md"
documentation = "https://github.com/Lunarequest/sddm2rpm/blob/mistress/README.md"
repository = "https://github.com/Lunarequest/sddm2rpm/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = [".vscode/*",".pre-commit-config.yaml"]

[dependencies]
bzip2 = "0.4.3"
clap = "4.1.4"
flate2 = "1.0.20"
handlebars = "4.3.6"
rpm-rs = "0.8.1"
serde = { version = "1.0.152", features = ["serde_derive"] }
sys-info = "0.9.1"
tar = "0.4.38"
walkdir = "2.3.2"
xz2 = "0.1.6"
zstd = { version = "0.9.0", default-features = false }

[package.metadata.rpm]
package = "sddm2rpm"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
sddm2rpm = { path = "/usr/bin/sddm2rpm" }
